--- a/web-developer.html
+++ b/web-developer.html
@@ -90,7 +90,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
-<h5><a href='https://kingkong.workable.com/j/4A06BA4BF2'>King Kong - Jobs: Badass Mid-Weight Front-End Web Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kingkong.workable.com/j/4A06BA4BF2'>King Kong - Jobs: Badass Mid-Weight Front-End Web Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -114,7 +114,7 @@
 <p><span class="badge badge-light">New York New York</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/webmd/job/oy9Cafwd'>WebMD Careers - Full Stack Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/webmd/job/oy9Cafwd'>WebMD Careers - Full Stack Developer</a></h5> 
 <p><span class="badge badge-light">New York New York</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -149,7 +149,7 @@ Platform?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999692351833-fullstack-web-developer'>Lecle Vietnam Fullstack Web Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999692351833-fullstack-web-developer'>Lecle Vietnam Fullstack Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -237,7 +237,7 @@ M?nster (published: 11.01.2019). Apply now or check the other available jobs.</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/silver-peak/job/o45rafwu'>Silver Peak Systems Careers - Senior Web Applications Developer - Bangalore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/silver-peak/job/o45rafwu'>Silver Peak Systems Careers - Senior Web Applications Developer - Bangalore</a></h5> 
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -272,7 +272,7 @@ Rails) to stabilize and expand our AI platform. AIcrowd (www.aicrowd.com) is a?.
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://latitudeinc.applytojob.com/apply/cPu5Ll7Bph/Senior-Web-Application-Developer'>Senior Web Application Developer - Latitude, Inc. - Career Page</a></h5> 
+<h5><a href='http://latitudeinc.applytojob.com/apply/cPu5Ll7Bph/Senior-Web-Application-Developer'>Senior Web Application Developer - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -288,7 +288,7 @@ Rails) to stabilize and expand our AI platform. AIcrowd (www.aicrowd.com) is a?.
 <p><span class="badge badge-light">Toronto Richmond Toronto</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://scopicsoftware.recruiterbox.com/jobs/fk03mxe'>
+<h5><a href='http://scopicsoftware.recruiterbox.com/jobs/fk03mxe'>
     Remote Junior Web Developer at Scopic Software
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -302,7 +302,7 @@ Rails) to stabilize and expand our AI platform. AIcrowd (www.aicrowd.com) is a?.
 <p><span class="badge badge-light">San Francisco Mountain View Vancouver Toronto London Paris Berlin Denver Canada</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://twincap.join.com/jobs/266585-web-developer-angular'>Job @ TwinCap (Z?rich): Web Developer (Angular) | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://twincap.join.com/jobs/266585-web-developer-angular'>Job @ TwinCap (Z?rich): Web Developer (Angular) | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>vor 1 Tag ... TwinCap GmbH has a job opening for Web Developer (Angular) in Z?rich (
 published: 19.07.2019). Apply now or check the other available jobs.</p>
@@ -315,7 +315,7 @@ published: 19.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Apply online for the job of Web Application Developer (PHP, JS) at ADVFN.</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/sundial/job/ncgoak5u1ds8nnzkmiobfmb39r'>Certified Microsoft .NET web Developer II (16119) | Sundial Software Career Opportunities</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/sundial/job/ncgoak5u1ds8nnzkmiobfmb39r'>Certified Microsoft .NET web Developer II (16119) | Sundial Software Career Opportunities</a></h5> 
 <p><span class="badge badge-light">Madison, WI</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -361,11 +361,11 @@ researches configuration of Solr search engines and the Solr query language.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='http://pitchup.applytojob.com/apply/ABQ5DgleZu/Junior-Python-Web-Developer'>Junior Python web developer - Pitchup.com - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://pitchup.applytojob.com/apply/ABQ5DgleZu/Junior-Python-Web-Developer'>Junior Python web developer - Pitchup.com - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJIaVfwg&k=Job&j=oW8uafws&__jvst=Employee&__jvsd=seqSPhw7&__jvsc=Twitter&bid=n16PPKw0'>MORI Associates, Inc. Careers - JavaScript Web Developer - NASA Moon-Mars project</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJIaVfwg&k=Job&j=oW8uafws&__jvst=Employee&__jvsd=seqSPhw7&__jvsc=Twitter&bid=n16PPKw0'>MORI Associates, Inc. Careers - JavaScript Web Developer - NASA Moon-Mars project</a></h5> 
 <p><span class="badge badge-light">Mountain View California</span></p>
 <p>Posted on:: 2019-07-22</p>
 <hr/>
@@ -373,7 +373,7 @@ researches configuration of Solr search engines and the Solr query language.</p>
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://kisi.recruitee.com/o/web-developer-intern'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kisi.recruitee.com/o/web-developer-intern'>
       Web Developer Intern - Kisi
     </a></h5> 
 <p><span class="badge badge-light">Stockholm, Sweden</span></p>
@@ -383,7 +383,7 @@ researches configuration of Solr search engines and the Solr query language.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/incode/61ad0e2e-8f8c-4024-9fc1-05c71801b1ae'>Incode Technologies - Senior Front End Web Developer / Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/incode/61ad0e2e-8f8c-4024-9fc1-05c71801b1ae'>Incode Technologies - Senior Front End Web Developer / Engineer</a></h5> 
 <p><span class="badge badge-light">Mexico Belgrade</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -397,7 +397,7 @@ researches configuration of Solr search engines and the Solr query language.</p>
 <p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/North40Outfitters/743999691981882-web-developer'>North40 Outfitters Web Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/North40Outfitters/743999691981882-web-developer'>North40 Outfitters Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -405,7 +405,7 @@ researches configuration of Solr search engines and the Solr query language.</p>
 <p><span class="badge badge-light">Mountain View California</span></p>
 <p>Posted on:: 2019-07-20</p>
 <hr/>
-<h5><a href='http://latitudeinc.applytojob.com/apply/yxjen523EV/Web-Application-Developer-II'>Web Application Developer II - Latitude, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://latitudeinc.applytojob.com/apply/yxjen523EV/Web-Application-Developer-II'>Web Application Developer II - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Tampa, FL</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
